[workspace]
members = ["couchbase-lite-core-sys", "couchbase-lite", "chat-demo"]

[patch.'crates-io']
# waiting https://github.com/hyperium/http/pull/422
http = { git = "https://github.com/adrien-jeser-doctolib/http.git" }
couchbase-lite = { path = "couchbase-lite" }
couchbase-lite-core-sys = { path = "couchbase-lite-core-sys" }
# waiting https://github.com/alexcrichton/cmake-rs/issues/96
# and https://github.com/alexcrichton/cmake-rs/pull/101
cmake = { git = "https://github.com/Dushistov/cmake-rs", rev = "125fe65e123f9bd4ceaf91924b0a381d473f2d97" }
